--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <header>
         <div class="container">
-            <h1>Velto<br>Food Store</h1>
+            <h1>Velto <br>Food Store</h1>
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Sobre a loja</a>
+                        <a href="#sobre-a-loja">Sobre a loja</a>
                     </li>
                     <li>
-                        <a href="#">Produtos</a>
+                        <a href="#produtos">Produtos</a>
                     </li>
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
     </header>
     <section id="sobre-a-loja">
         <div class="container">
-            <img src="./images/comidas.jpg" alt="Prateleira de vegetais">
+            <img src="https://via.placeholder.com/1180x1180" alt="Imagem da loja">
             <div>
                 <h2>Sobre a loja</h2>
                 <p>
